chore: upgrade more packages
- commander for @serialport/list
- bindings prebuilt and bindings
- docusaurus for the website

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -12,7 +12,7 @@
     "crowdin-download": "crowdin --config ../../crowdin.yaml download -b master"
   },
   "devDependencies": {
-    "docusaurus": "^1.6.0"
+    "docusaurus": "^1.8.3"
   },
-  "version": null
+  "version": "0.0.0"
 }
